--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -1,9 +1,8 @@
 ---
 import SunIcon from "./Icons/Sun.astro"
 import MoonIcon from "./Icons/Moon.astro"
-import SystemIcon from "./Icons/System.astro"
 
-const THEMES = ["Light", "Dark", "System"]
+const THEMES = ["Light", "Dark"] 
 ---
 
 <div class="relative ml-1 mr-1">
@@ -16,10 +15,6 @@ const THEMES = ["Light", "Dark", "System"]
     <SunIcon id="light" class="theme-toggle-icon size-5 transition-all" />
     <MoonIcon
       id="dark"
-      class="theme-toggle-icon absolute size-5 transition-all"
-    />
-    <SystemIcon
-      id="system"
       class="theme-toggle-icon absolute size-5 transition-all"
     />
   </button>
@@ -65,13 +60,10 @@ const THEMES = ["Light", "Dark", "System"]
   const themesMenu = document.getElementById("themes-menu")
 
   const getThemePreference = () => {
-    if (typeof localStorage !== "undefined") {
-      return localStorage.getItem("theme") ?? "system"
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      return localStorage.getItem("theme")
     }
-
-    return window.matchMedia("(prefers-color-scheme: dark)").matches
-      ? "dark"
-      : "light"
+    return "system"
   }
 
   const updateIcon = (themePreference) => {
@@ -94,7 +86,7 @@ const THEMES = ["Light", "Dark", "System"]
       themePreference === "dark" ||
       (themePreference === "system" && matchMedia.matches)
 
-    updateIcon(themePreference)
+    updateIcon(isDark ? "dark" : "light")
     document.documentElement.classList[isDark ? "add" : "remove"]("dark")
   }
 
