Añadido el proyecto Spotify

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -20,18 +20,33 @@ const TAGS = {
 const PROJECTS = [
     {
         title: "Incendios forestales en España entre 2001 y 2015",
-        description: "Creado con Tableau. Se analizan los incendios forestales en España entre los años 2001 y 2015.",
+        description: "Se analizan los incendios forestales en España entre los años 2001 y 2015.",
         link: "https://public.tableau.com/app/profile/sergi.cozar.badia/viz/IncendiosforestalesenEspaaentre2001y2015/Dashboard1",
         image: "/Projects/Incendios.webp",
         tags: [TAGS.TABLEAU]
     },
     {
         title: "Limpieza, análisis y visualización de datos",
-        description: "Creado con Python. Proyecto de limpieza, análisis y visualización de datos.",
+        description: "Proyecto de limpieza, análisis y visualización de datos.",
         link: "https://github.com/SergiiCB/Limpieza-an-lisis-y-visualizaci-n-de-datos/blob/main/Proyecto_de_limpieza_analisis_y_visualizaci%C3%B3n_de_datos.ipynb",
         github: "https://github.com/SergiiCB?tab=repositories",
         image: "/Projects/LAVDatos.webp",
         tags: [TAGS.PYTHON]
+    },
+    {
+        title: "Limpieza y Transformación de Datos Spotify 2024",
+        description: "Proyecto de limpieza y transformación del dataset Spotify Top 50 Playlist Songs de Kaggle.",
+        link: "https://github.com/SergiiCB/Proyecto-de-limpieza-y-transformacion-de-datos-Spotify-2024/blob/4327c0f14b65f86ebc1eed5ce830867dc6b514f5/Limpieza%20y%20Transformaci%C3%B3n%20de%20Datos%20Spotify%202024.ipynb",
+        github: "https://github.com/SergiiCB?tab=repositories",
+        image: "/Projects/SpotifyL.webp",
+        tags: [TAGS.PYTHON]
+    },
+    {
+        title: "Análisis y Visualización de Datos Spotify 2024",
+        description: "Análisis y Visualización del Top canciones Spotify (01/01/2024 a 23/11/2024).",
+        link: "https://public.tableau.com/app/profile/sergi.cozar.badia/viz/AnlisisyVisualizacindeDatosSpotify2024/Dashboard1",
+        image: "/Projects/SpotifyV.webp",
+        tags: [TAGS.TABLEAU]
     }
 ]
 ---
