Actualización del portafolio.

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -26,17 +26,17 @@ const PROJECTS = [
         tags: [TAGS.TABLEAU]
     },
     {
-        title: "Limpieza, análisis y visualización de datos",
-        description: "Proyecto de limpieza, análisis y visualización de datos.",
-        link: "https://github.com/SergiiCB/Limpieza-an-lisis-y-visualizaci-n-de-datos/blob/main/Proyecto_de_limpieza_analisis_y_visualizaci%C3%B3n_de_datos.ipynb",
+        title: "Web Scraping con API's y Beautiful-Soup",
+        description: "Proyecto de extracción automática de datos web (Web Scraping) con API's y Beautiful Soup.",
+        link: "https://github.com/SergiiCB/Web-Scraping-con-API-y-Beautiful-Soup/blob/main/Web%20Scraping%20con%20API%20y%20Beautiful%20Soup.ipynb",
         github: "https://github.com/SergiiCB?tab=repositories",
-        image: "/Projects/LAVDatos.webp",
+        image: "/Projects/WebScraping.webp",
         tags: [TAGS.PYTHON]
     },
     {
         title: "Limpieza y Transformación de Datos Spotify 2024",
         description: "Proyecto de limpieza y transformación del dataset Spotify Top 50 Playlist Songs de Kaggle.",
-        link: "https://github.com/SergiiCB/Proyecto-de-limpieza-y-transformacion-de-datos-Spotify-2024/blob/4327c0f14b65f86ebc1eed5ce830867dc6b514f5/Limpieza%20y%20Transformaci%C3%B3n%20de%20Datos%20Spotify%202024.ipynb",
+        link: "https://github.com/SergiiCB/Limpieza-y-transformacion-de-datos-Spotify-2024/blob/main/Limpieza%20y%20Transformaci%C3%B3n%20de%20Datos%20Spotify%202024.ipynb",
         github: "https://github.com/SergiiCB?tab=repositories",
         image: "/Projects/SpotifyL.webp",
         tags: [TAGS.PYTHON]
@@ -57,7 +57,7 @@ const PROJECTS = [
       <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
     <div class="w-full md:w-1/2">
       <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-        <img alt="Recién llegado vs 5 años en Nueva Zelanda" class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
+        <img alt="Image" class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
       </div>
     </div>
   
