--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const navItems = [
   {
     title: "Contacto",
     label: "contacto",
-    url: "mailto:sergicozar@gmail.com",
+    url: "https://www.linkedin.com/in/sergicb",
   },
 ]
 ---
