--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,10 +27,10 @@ const { description, title } = Astro.props
 
   <body class="relative text-black dark:text-white">
     <div
-      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full 
-      bg-white dark:bg-black
-      bg-[radial-gradient(125%_100%_at_50%_10%,#fff_40%,#63e_100%)] 
-      dark:bg-[radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"
+      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full
+      bg-white dark:bg-slate-950
+      bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)]
+      dark:bg-[radial-gradient()]"
     >
     </div>
     <Header />
